correct color contrast.

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -8,7 +8,7 @@
   --bg-color-light: #ecf0f1;
   --text-color-light: #34495e;
   --title-color-light: #1a2334;
-  --misc-color-light: #d35400;
+  --misc-color-light: #bf4500;
   /* DARK */
   --bg-color-dark: #1a2334;
   --text-color-dark: #ecf0f1;
